style(tailwind.css): add new CSS class .text-neutral-500 for consistent text color fix(home.ejs): update tailwind.css link with new timestamp to force cache refresh style(home.ejs): update text styling for sale and launch messages for better readability

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -783,6 +783,11 @@ body {
   color: rgb(23 23 23 / var(--tw-text-opacity));
 }
 
+.text-neutral-500 {
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
+}
+
 .invert-0 {
   --tw-invert: invert(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
